--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="logo.png">
-    <title>paralegal.lk Doc Reader</title>
+    <title>paralegal.lk | Doc Reader</title>
     <style>
         /* Dark Theme Variables */
         :root {
